# transactions

./: .gitignore  README.md  main.py  pyproject.toml
scr/: main.py
tests/: conftest.py  file_test_main.json  test_db_operations.py  test_hide_card_number.py  test_main.py  test_show_transactions.py
tests/tests_db_operation/: conftest.py  file_for_test_operation.json  test_db_operations.py
utils/: db_operations.py  hide_card_number.py  show_transactions.py
