[tool.poetry]
name = "transactions"
version = "0.1.0"
description = "Display the 5 most recent transactions of the bank customer"
authors = ["Dmitrii <dima12sik@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
